<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BackPack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Log Out</string>
    <string name="user_name_request">Enter Your User Name</string>
    <string name="password_request">Enter Your Password</string>
    <string name="user_type_request">Select User Type</string>
    <string name="done">Log In</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="class_list">My Classes</string>
    <string name="add_class">Add New Class</string>
    <string name="search_class">Search New Class</string>
    <string name="lesson_plan_list">My Lesson Plans</string>
    <string name="add_lesson_plan">Add New Lesson Plan</string>
    <string name="add_assignment">Add New Assignment</string>
    <string name="enter_class_title">Enter Classroom Name</string>
    <string name="enter_class_subject">Enter Classroom Subject</string>
    <string name="enter_class_grade">Select Classroom Grade Level</string>
    <string name="btn_create_class">Create New Classroom</string>
    <string name="enter_assignment_name">Enter the Assignment Title</string>
    <string name="enter_assignment_assgn_date">Date Assigned</string>
    <string name="enter_assignment_due_date">Date Due</string>
    <string name="enter_assignment_details">Enter the assignment instructions</string>
    <string name="btn_create_assignment">Create</string>
    <string name="btn_search_class">Search</string>
    <string name="search_results">Search Results</string>
    <string name="btn_add_class">Add To My Classes</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="student_list">Students Enrolled</string>
    <string name="view_students">View Students Enrolled In Class</string>
    <string name="signUp">Click Here To Sign Up!</string>
    <string name="enter_full_name">Enter Your Full Name</string>
    <string name="enter_email">Enter Your Email Address</string>
    <string name="notes">Includes Notes</string>
    <string name="class_subject_title">Class Subject:</string>
    <string name="class_grade_level_title">Grade Level:</string>
    <string name="add_notes">Enter Notes About This Assignment</string>
    <string name="chkbx_complete">Completed</string>
    <string name="btn_done">Done</string>
    <string name="hint_student_name">Enter the student\'s full name</string>
    <string name="hint_student_email">Enter the student\'s email address</string>
    <string name="btn_add_student">Add Student</string>
    <string name="student_name">Student Name:</string>
    <string name="student_email">Student Email:</string>
    <string name="teacher_type">Teacher</string>
    <string name="student_type">Student</string>
    <string name="parent_type">Parent</string>
    <string name="link_search_student">Search For Students</string>
    <string name="student_add_failure">Unable to add student</string>
    <string name="student_add_success">Student Added</string>

</resources>
