<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/enter_assignment_name"
        android:hint="@string/enter_assignment_name"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/enter_assgn_date"
        android:hint="@string/enter_assignment_assgn_date"
        android:inputType="date"
        android:layout_margin="@dimen/text_margin"
        android:layout_below="@id/enter_assignment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/enter_due_date"
        android:hint="@string/enter_assignment_due_date"
        android:inputType="date"
        android:layout_margin="@dimen/text_margin"
        android:layout_alignParentRight="true"
        android:layout_below="@id/enter_assignment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/enter_assignment_directions"
        android:hint="@string/enter_assignment_details"
        android:layout_margin="@dimen/text_margin"
        android:layout_below="@id/enter_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_create_assignment"
        android:text="@string/btn_create_assignment"
        android:layout_below="@id/enter_assignment_directions"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>