<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <include layout="@layout/edittext_username_password"
        android:id="@+id/user_password_entry"/>

    <TextView
        android:text="@string/user_type_request"
        android:textSize="@dimen/text_view_size"
        android:layout_below="@id/user_password_entry"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/text_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Spinner
        android:id="@+id/spnr_user_type"
        android:layout_below="@id/user_password_entry"
        android:layout_alignParentRight="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"></Spinner>

    <EditText
        android:id="@+id/enter_full_name"
        android:hint="@string/enter_full_name"
        android:layout_below="@id/spnr_user_type"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/text_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/enter_email_address"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/enter_full_name"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/text_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_done"
        android:text="@string/done"
        android:layout_below="@id/enter_email_address"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</RelativeLayout>