<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_student_name"
        android:text="@string/student_name"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/student_name"
        android:layout_margin="@dimen/text_margin"
        android:layout_toRightOf="@id/header_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/header_student_email"
        android:text="@string/student_email"
        android:layout_margin="@dimen/text_margin"
        android:layout_below="@id/header_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/student_email_address"
        android:layout_below="@id/student_name"
        android:layout_toRightOf="@id/header_student_email"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/student_assignment_list"
        android:layout_below="@id/student_email_address"
        android:layout_width="wrap_content"
        android:layout_height="445dp"></ListView>

    <Button
        android:id="@+id/add_student"
        android:text="@string/btn_add_student"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>