<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail_assignment_title"
        android:textSize="@dimen/text_view_size"
        android:layout_margin="@dimen/text_margin"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_assignment_assgn_date"
        android:textSize="@dimen/text_view_size"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_assignment_due_date"
        android:textSize="@dimen/text_view_size"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_assignment_details"
        android:textSize="@dimen/text_view_size"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkbx_complete"
        android:id="@+id/checkBox_state"/>

    <EditText
        android:id="@+id/assignment_notes"
        android:hint="@string/add_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save_changes"
        android:text="@string/btn_save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/student_response_list"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>


</LinearLayout>