<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:id="@+id/class_specific_title"
        android:text="Class Name"
        android:textSize="@dimen/heading_text_size"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/class_specific_subject"
        android:textSize="@dimen/text_view_size"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/class_specific_grade"
        android:textSize="@dimen/text_view_size"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <include layout="@layout/list_view_assignment"/>

        </LinearLayout>

    <TextView
        android:id="@+id/add_assignment"
        android:text="@string/add_assignment"
        android:clickable="true"
        android:textSize="@dimen/text_view_size"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/text_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/view_students"
        android:text="@string/view_students"
        android:clickable="true"
        android:textSize="@dimen/text_view_size"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/text_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_add_class"
        android:text="@string/btn_add_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>





</LinearLayout>